--- a/markdown_generator/pubs.bib
+++ b/markdown_generator/pubs.bib
@@ -410,6 +410,13 @@
 	publisher = {IEEE},
 }
 
+@Article{jiang2017brief,
+	author  = {Jiang, Y and Yang, C and Na, J and Li, G and Li, Y and Zhong, Junpei},
+	title   = {A Brief Review of Neural Networks based Learning and Control and their Applications for Robots},
+	journal = {Complexity},
+	year    = {2017},
+}
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
 
